Next release

Twitter & Facebook.
Achievements.
More sounds.
Instructions.
Possible changes to Meditation mode.
New particle graphic / animation?


Beta 10

Game will now pause when it is entering the background state.
Fixed memory leak in SFX loading code.


Beta 9

Can no longer rapid-fire particles to cause them to colide outside of the game.
Fixed bug where new high score would not be indicated on game over screen.
Added audio fade in when switching BGM tracks.
New fonts and colors.
New menu layouts.
High score screen alignment changed.
Modified log message popup animation.
Out-of bounds particle that causes game over will now blink.
Game over flasher now aligned better with detector ring.
Renamed Practice back to Meditation.
Added version string to lower right corner of main menu screen.


Beta 8

Renamed Meditation to Practice.
Added Game Center high score support.
Added shading to artwork and adjusted colors to match icon.
New background music and sound effects.
Moved LHC map.
Log messages now display on top of puzzle.
Moved next piece indicator.
Fixed typo in Accelerator.


Beta 7

Time Attack and Accelerator swapped on main menu screen.
Border of particle sprite is now light instead of dark.
Explosions are larger with fewer particles.
Outer detector now blinks instead of scaling.
Adjusted detector blink and graph angle to prevent overlap.
Adjusted detector graph scaling to remove transparency.
Drawing of explosion particle systems is now a single OpenGL call.
Time Attack now adds 25 seconds per level instead of 30.
Maximum time between pieces in Acellerator mode adjusted down to 2.9 seconds
Minimum time between pieces in Acellerator mode adjusted down to 0.9 seconds.
Fixed bug where sound effects would stop after selecing New Game from the Game 
    Over screen.
New App Icon
Level indicator removed from Meditation mode.
Level indecator no-longer animates when changing levels.
App display name changed from CharmQuark to Charm Quark. 