@@ -1,7 +1,5 @@
 . Achievements!
 
-. Game Center Pop Up if logged in and viewing highscore.
-
 . Twitter
 
 . Facebook
